# jdev2026_python_wheel

./: .gitlab-ci.yml  MANIFEST.in  README.md  decrypt_rsa.py  pyproject.toml
.github/workflows/: create_wheel.yml
jdev2026_python_wheel_lindangulopez/data/: primes.npz
jdev2026_python_wheel_thomas_baudier/: decrypt_rsa.py  helpers.py
rsa_demo_env/: pyvenv.cfg
